--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pushstate-server",
+  "name": "@dotfold/pushstate-server",
   "version": "2.1.0",
   "description": "Static file server that works with HTML5 Pushstate.",
   "main": "index.js",
@@ -25,6 +25,7 @@
     "compression": "^1.1.0",
     "connect": "^3.2.0",
     "connect-static-file": "^1.1.2",
+    "http-proxy-middleware": "^0.17.2",
     "serve-static": "^1.6.2"
   },
   "devDependencies": {
